--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <button class="navigation__btn-link">Обратный звонок</button>
             </li>
           </ul>
-        </div>        
+        </div>
       </div>
     </div>
     <main>
@@ -289,7 +289,7 @@
       <div class="container booking__container">
         <div class="booking__container">
           <h2 class="booking__title">Хочу тур</h2>
-          <form class="booking__form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
+          <form class="booking__form form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
             <div class="form__group">
               <label class="booking__form-title" for="f-city">Город вылета</label>
               <select class="booking__form-input booking__form-input_city" name="city" id="f-city">
@@ -323,7 +323,90 @@
         </div>
       </div>
     </section>
-    
+    <section class="contacts">
+      <div class="container">
+        <h2 class="contacts__title">Контакты</h2>
+        <div class="contacts__content">
+          <div class="contacts__left">
+            <ul class="contacts__list">
+              <li class="contacts__list-item">
+                <h3 class="contacts__list-title">
+                  Адрес
+                </h3>
+                <address class="contacts__list-descr">
+                  Москва, улица Юности, дом 5 строение 4, офис 2
+                </address>
+              </li>
+              <li class="contacts__list-item">
+                <h3 class="contacts__list-title">
+                  Телефоны
+                </h3>
+                <div class="contacts__list-descr">
+                  <a href="tel:+74995356434" class="contacts__list-link">+7 499 535-64-34</a>
+                  <a href="tel:+74950050544" class="contacts__list-link">+7 495 005-05-44</a>
+                </div>
+              </li>
+              <li class="contacts__list-item">
+                <h3 class="contacts__list-title">
+                  Email
+                </h3>
+                <div class="contacts__list-descr">
+                  <a href="mailto:lg.oona@mail.ru" class="contacts__list-link">lg.oona@mail.ru</a>
+                  <div class="contacts__list-text">по&nbsp;вопросам бронирования</div>
+                  <a href="mailto:hotels.ln@mail.ru" class="contacts__list-link">hotels.ln@mail.ru</a>
+                  <div class="contacts__list-text">по&nbsp;вопросам сотрудничества</div>
+                </div>
+              </li>
+              <li class="contacts__list-item">
+                <h3 class="contacts__list-title">
+                  График
+                </h3>
+                <div class="contacts__list-descr">
+                  Понедельник-пятница, с&nbsp;10:00 до&nbsp;19:00
+                </div>
+              </li>
+            </ul>
+            <a href="#" class="contacts__btn">Построить маршрут</a>
+          </div>
+          <div class="contacts__right"></div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrap">
+          <div class="footer__left">
+            <div class="footer__text footer__left-text">&copy;&nbsp;2012&ndash;2020 Управляющая компания Объединённой сети &laquo;Лагуна Хотелс&raquo;</div>
+            <div class="footer__text  footer__left-text">Представленная на&nbsp;сайте информация носит справочный характер и&nbsp;не&nbsp;является публичной офертой</div>
+            <a href="#" class="footer__link">Пользовательское соглашение</a>
+          </div>
+          <div class="footer__center">
+            <div class="footer__text footer__right-text">11710, улица Юности, дом 5 строение 4, офис 2</div>
+            <div class="footer__link-wrap">
+              <a href="tel:+74995356434" class="footer__link">+7 499 535-64-34</a>
+              <a href="tel:+74950050544" class="footer__link">+7 495 005-05-44</a>
+            </div>
+            <div class="footer__link-wrap">
+              <a href="mailto:lg.oona@mail.ru" class="footer__link">lg.oona@mail.ru</a>
+              <a href="mailto:hotels.ln@mail.ru" class="footer__link">hotels.ln@mail.ru</a>
+            </div>
+          </div>
+          <div class="footer__right">
+            <ul class="social-list-list">
+              <li class="social-list__item">
+                <a href="" class="social-list__link social-list__link_1"></a>
+              </li>
+              <li class="social-list__item">
+                <a href="" class="social-list__link social-list__link_2"></a>
+              </li>
+              <li class="social-list__item">
+                <a href="" class="social-list__link social-list__link_3"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
