--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <ul class="hotels__list">
             <li class="hotels__item">
               <div class="hotels__item-content">
-                <img src="assets/img/hotels-1@1x.jpg" srcset="assets/img/hotels-1@2x 2x" alt="Фотография отеля Lagoona española">
+                <img class="hotels__img" src="assets/img/hotels-1@1x.jpg" srcset="assets/img/hotels-1@2x.jpg 2x" alt="Фотография отеля Lagoona española">
                 <div class="hotels__item-info">
                   <div class="hotels__item-price hotels__item-rate hotels__item-rate_4-stars">
                     <span class="hotels__item-text-light">от</span>
@@ -174,7 +174,7 @@
             </li>
             <li class="hotels__item">
               <div class="hotels__item-content">
-                <img src="assets/img/hotels-2@1x.jpg" srcset="assets/img/hotels-2@2x 2x" alt="Фотография отеля Lagoona son típicas">
+                <img class="hotels__img" src="assets/img/hotels-2@1x.jpg" srcset="assets/img/hotels-2@2x.jpg 2x" alt="Фотография отеля Lagoona son típicas">
                 <div class="hotels__item-info">
                   <div class="hotels__item-price hotels__item-rate hotels__item-rate_4-stars">
                     <span class="hotels__item-text-light">от</span>
@@ -189,7 +189,7 @@
             </li>
             <li class="hotels__item">
               <div class="hotels__item-content">
-                <img src="assets/img/hotels-3@1x.jpg" srcset="assets/img/hotels-3@2x 2x" alt="Фотография отеля Lagoona de la guerra">
+                <img class="hotels__img" src="assets/img/hotels-3@1x.jpg" srcset="assets/img/hotels-3@2x.jpg 2x" alt="Фотография отеля Lagoona de la guerra">
                 <div class="hotels__item-info">
                   <div class="hotels__item-price hotels__item-rate hotels__item-rate_5-stars">
                     <span class="hotels__item-text-light">от</span>
@@ -204,7 +204,7 @@
             </li>
             <li class="hotels__item">
               <div class="hotels__item-content">
-                <img src="assets/img/hotels-4@1x.jpg" srcset="assets/img/hotels-4@2x 2x" alt="Фотография отеля Lagoona mentira piadosa">
+                <img class="hotels__img" src="assets/img/hotels-4@1x.jpg" srcset="assets/img/hotels-4@2x.jpg 2x" alt="Фотография отеля Lagoona mentira piadosa">
                 <div class="hotels__item-info">
                   <div class="hotels__item-price hotels__item-rate hotels__item-rate_5-stars">
                     <span class="hotels__item-text-light">от</span>
@@ -219,7 +219,7 @@
             </li>
             <li class="hotels__item">
               <div class="hotels__item-content">
-                <img src="assets/img/hotels-5@1x.jpg" srcset="assets/img/hotels-5@2x 2x" alt="Фотография отеля Lagoona empujar la creatividad">
+                <img class="hotels__img" src="assets/img/hotels-5@1x.jpg" srcset="assets/img/hotels-5@2x.jpg 2x" alt="Фотография отеля Lagoona empujar la creatividad">
                 <div class="hotels__item-info">
                   <div class="hotels__item-price hotels__item-rate hotels__item-rate_4-stars">
                     <span class="hotels__item-text-light">от</span>
@@ -234,7 +234,7 @@
             </li>
             <li class="hotels__item">
               <div class="hotels__item-content">
-                <img src="assets/img/hotels-6@1x.jpg" srcset="assets/img/hotels-6@2x 2x" alt="Фотография отеля Lagoona el retorno">
+                <img class="hotels__img" src="assets/img/hotels-6@1x.jpg" srcset="assets/img/hotels-6@2x.jpg 2x" alt="Фотография отеля Lagoona el retorno">
                 <div class="hotels__item-info">
                   <div class="hotels__item-price hotels__item-rate hotels__item-rate_4-stars">
                     <span class="hotels__item-text-light">от</span>
@@ -249,7 +249,7 @@
             </li>
             <li class="hotels__item">
               <div class="hotels__item-content">
-                <img src="assets/img/hotels-7@1x.jpg" srcset="assets/img/hotels-7@2x 2x" alt="Фотография отеля Lagoona mentira piadosa">
+                <img class="hotels__img" src="assets/img/hotels-7@1x.jpg" srcset="assets/img/hotels-7@2x.jpg 2x" alt="Фотография отеля Lagoona mentira piadosa">
                 <div class="hotels__item-info">
                   <div class="hotels__item-price hotels__item-rate hotels__item-rate_5-stars">
                     <span class="hotels__item-text-light">от</span>
@@ -264,7 +264,7 @@
             </li>
             <li class="hotels__item">
               <div class="hotels__item-content">
-                <img src="assets/img/hotels-8@1x.jpg" srcset="assets/img/hotels-8@2x 2x" alt="Фотография отеля Lagoona suerte siguió siempre">
+                <img class="hotels__img" src="assets/img/hotels-8@1x.jpg" srcset="assets/img/hotels-8@2x.jpg 2x" alt="Фотография отеля Lagoona suerte siguió siempre">
                 <div class="hotels__item-info">
                   <div class="hotels__item-price hotels__item-rate hotels__item-rate_4-stars">
                     <span class="hotels__item-text-light">от</span>
@@ -286,7 +286,7 @@
         </div>
       </section>
     <section class="booking">
-      <div class="container booking__container">
+      <div class="container">
         <div class="booking__container">
           <h2 class="booking__title">Хочу тур</h2>
           <form class="booking__form form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
@@ -393,7 +393,7 @@
             </div>
           </div>
           <div class="footer__right">
-            <ul class="social-list-list">
+            <ul class="social-list">
               <li class="social-list__item">
                 <a href="" class="social-list__link social-list__link_1"></a>
               </li>
