--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     </header>
     <div class="navigation">
       <div class="container">
-        <div class="navigation__container">
-          <nav class="nav">
+        <nav class="navigation__container">
             <ul class="nav__navigation-list">
               <li class="nav__navigation-item">
                 <a href="#about" class="nav__navigation-link">О нас</a>
@@ -50,16 +49,15 @@
                 <a href="#contacts" class="nav__navigation-link">Контакты</a>
               </li>
             </ul>
-          </nav>
-          <ul class="navigation__btn-list">
-            <li class="navigation__btn-item">
-              <a href="#booking" class="navigation__btn-link">Хочу тур</a>
-            </li>
-            <li class="navigation__btn-item">
-              <button class="navigation__btn-link">Обратный звонок</button>
-            </li>
-          </ul>
-        </div>
+            <ul class="navigation__btn-list">
+              <li class="navigation__btn-item">
+                <a href="#booking" class="navigation__btn-link">Хочу тур</a>
+              </li>
+              <li class="navigation__btn-item">
+                <button class="navigation__btn-link">Обратный звонок</button>
+              </li>
+            </ul>
+        </nav>
       </div>
     </div>
     <main>
@@ -197,7 +195,7 @@
             </li>
             <li class="advantages__item">
               <p class="advantages__item-descr advantages__item-descr-4">Повседневная практика показывает, что сложившаяся структура организации</p>
-            </li>
+            </li>         
             <li class="advantages__item">
               <p class="advantages__item-descr advantages__item-descr-5">Равным образом рамки и&nbsp;место обучения кадров способствует подготовки сотрудника</p>
             </li>
