--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <div class="navigation">
       <div class="container">
         <nav class="navigation__container">
+          <div class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
             <ul class="nav__navigation-list">
               <li class="nav__navigation-item">
                 <a href="#about" class="nav__navigation-link">О нас</a>
